[gd_scene load_steps=2 format=3 uid="uid://cd0sr5hrvouoh"]

[ext_resource type="Script" path="res://menus/game_over.gd" id="1_mfwk2"]

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mfwk2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 540.0

[node name="PanelContainer" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(720, 540)
layout_mode = 2
color = Color(0, 0, 0, 0.709804)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Menu" type="MarginContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="CenterContainer/MarginContainer/Menu"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[wave]Set complete!"
fit_content = true
autowrap_mode = 0

[node name="Stats" type="VBoxContainer" parent="CenterContainer/MarginContainer/Menu/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TimeStat" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox/Stats"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Time: [color=yellow]0[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="JokesStat" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox/Stats"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Jokes told: [color=green]0[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="LaughsStat" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox/Stats"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Laughs received: [color=orange]0[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TomatosStat" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox/Stats"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Tomatos sold: [color=red]0[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="NearMissStat" type="RichTextLabel" parent="CenterContainer/MarginContainer/Menu/VBox/Stats"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Near misses: [color=gray]0[/color][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/MarginContainer/Menu/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="Next" type="Button" parent="CenterContainer/MarginContainer/Menu/VBox/Buttons"]
visible = false
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Next Night"

[node name="Control" type="Control" parent="CenterContainer/MarginContainer/Menu/VBox/Buttons"]
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Main Menu" type="Button" parent="CenterContainer/MarginContainer/Menu/VBox/Buttons"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Main Menu
"

[connection signal="pressed" from="CenterContainer/MarginContainer/Menu/VBox/Buttons/Main Menu" to="." method="_on_main_menu_pressed"]
